# Newton-api

./: .dockerignore  .env.example  .gitignore  .vercelignore  APP_INVENTORY.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPERS.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.lambda  FIX_SUMMARY.md  GETTING_STARTED.md  GLASS_BOX.md  GUMROAD_PRODUCTS.md  GUMROAD_SETUP.md  JARED_LEWIS_RESUME_APPLE_HID.md  LICENSE  MIGRATION_COMPLETE.md  NEWTONKNOWS.md  PAPER.md  PERFORMANCE_REPORT.md  QUICKSTART.md  QUICK_DEPLOY.md  README.md  ROUTING_FIX_SUMMARY.md  TEST_REPORT.md  TINYTALK_BIBLE.md  TINYTALK_PROGRAMMING_GUIDE.md  VALIDATION_REPORT.md  VALUATION_2026.md  VERIFICATION_REPORT.md  WHITEPAPER.md  WINDOWS_SETUP.md  _redirects  app.py  deploy.sh  exemption_engine.py  (+17 more)
.github/: copilot-instructions.md
.newton_ledger_test_chain_1/: ledger.jsonl
.newton_ledger_test_chain_12/: ledger.jsonl
.newton_ledger_test_chain_13/: ledger.jsonl
.newton_ledger_test_chain_14/: ledger.jsonl
.newton_ledger_test_chain_15/: ledger.jsonl
.newton_ledger_test_chain_16/: ledger.jsonl
.newton_ledger_test_chain_17/: ledger.jsonl
.newton_ledger_test_chain_18/: ledger.jsonl
.newton_ledger_test_chain_19/: ledger.jsonl
.newton_ledger_test_chain_2/: ledger.jsonl
.newton_ledger_test_chain_20/: ledger.jsonl
.newton_ledger_test_chain_3/: ledger.jsonl
.newton_ledger_test_chain_4/: ledger.jsonl
.newton_ledger_test_chain_5/: ledger.jsonl
.newton_ledger_test_chain_6/: ledger.jsonl
.newton_ledger_test_chain_7/: ledger.jsonl
newTinyTalk/: GUIDE.md  __init__.py  ast_nodes.py  cli.py  errors.py  kernel.py  lexer.py  parser.py  pyproject.toml  runtime.py  server.py  sql_transpiler.py  stdlib.py  transpiler.py  typechecker.py  types.py
newTinyTalk/examples/: fibonacci.tt  hello.tt  step_chains.tt
newTinyTalk/static/: index.html
newTinyTalk/tests/: test_core.py  test_reshape.py  test_roadmap.py  test_transpiler.py
(+291 files in other folders)
