[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realTinyTalk"
version = "1.0.0"
description = "The Verified General-Purpose Programming Language — every loop bounded, every operation traced, every output proven."
readme = "README.md"
license = {text = "Dual License (Educational Free / Commercial)"}
requires-python = ">=3.11"
authors = [
    {name = "Jared Nashon Lewis"}
]
keywords = ["programming-language", "verified", "tinytalk", "constraint", "interpreter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Interpreters",
]

dependencies = [
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "requests>=2.31.0",
]

[project.scripts]
tinytalk = "realTinyTalk.cli:main"

[project.urls]
Homepage = "https://github.com/jaredlewiswechs/realTinyTalk"
Repository = "https://github.com/jaredlewiswechs/realTinyTalk"

[tool.setuptools.packages.find]
include = ["realTinyTalk*"]

[tool.setuptools.package-data]
"realTinyTalk" = ["*.md", "*.tt", "web/static/*", "web/storage/**/*"]
