[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "newTinyTalk"
version = "2.0.0"
description = "A Smalltalk-inspired programming language - ergonomic, human-readable, deploy-ready."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
tinytalk = "newTinyTalk.cli:main"
